<resources>
    <string name="app_name">GameBacklog5.2</string>
    <string name="txt_edit_title">Title</string>
    <string name="txt_edit_platform">Platform</string>
    <string name="txt_edit_day">Day</string>
    <string name="txt_edit_month">Month</string>
    <string name="txt_edit_year">Year</string>
    <string name="card_text_title">Diablo 3</string>
    <string name="card_text_platform">PS4, PC</string>
    <string name="card_text_release_text">Release :</string>
    <string name="card_text_release_date">25 october 2019</string>

    <string name="action_settings">Settings</string>
    <string name="last_updated">Last updated: %1s</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="date_invalid_error">invalid input date!</string>
    <string name="title_invalid_error">invalid input title!</string>
    <string name="platform_invalid_error">invalid input platform!</string>


</resources>
